# WebpagePrinter

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CTestConfig.cmake  README.md  WebpagePrinterTool-arx  b.sh  bdocs.sh  c.sh  flake.nix  flake3.nix  r.sh
.direnv/: flake-profile-1-link
.github/workflows/: deploy.yaml  linuxdocs.yaml  win.yaml
cmake/: QtCommon.cmake
docs/: CMakeLists.txt  Doxyfile.in  footer.html  header.html
src/: CMakeLists.txt  InitConfig.h  log.h  main.cpp  main2.cpp
src/connector/: HttpServer.cpp  HttpServer.h  MsgStation.cpp  MsgStation.h  WebsocketClient.cpp  WebsocketClient.h  WebsocketServer.cpp  WebsocketServer.h
src/db/: SqliteDb.cpp  SqliteDb.h  db.cpp  db.h
src/excep/: CanExceptionCallback.h  FatalError.h  JsonParseError.h  PrintWorkFlowError.h
src/exception/: FatalError.h  JsonParseError.h  SqliteOpError.h
src/log/: log.cpp  log.h
src/model/: ModelsJson.cpp  ModelsJson.h  ModelsSql.h  PrintedPage.h  PrinterConfig.h  WebInterface.h  model.h
src/printer/: DataPack.h  GetConfig.h  LastCmd.h  LastProcess.h  PageRender.h  Printer.cpp  Printer.h  RenderPng.h  ToPrinter.h  WebRender.cpp  WebRender.h  WorkFlow.h
tests/: CMakeLists.txt  JSREQUEST.html  TEST_InitConfig.cpp  TEST_Print.cpp  TEST_SqliteDb.cpp  TEST_WebRender.cpp  TEST_log.cpp  future_test.cpp
tests/TEST_httpserver/: index.html
tests/TEST_httpserver/assets/: index.js
